# mulle-objc-runtime-startup

./: .gitignore  .touch  CMakeLists.txt  LICENSE  README.md  RELEASENOTES.md  clib.json  package.json
.github/workflows/: mulle-sde-ci.yml  semgrep.yml
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh  tool
.mulle/etc/project/: version-info.sh
.mulle/etc/sourcetree/: config
.mulle/etc/sourcetree/graph/: environment
.mulle/share/sde/: extension
.mulle/share/sourcetree/: config
cmake/: CCompiler.cmake  DependenciesAndLibraries.cmake  Headers.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: Environment.cmake  StandaloneC.cmake
cola/: description.md.bud  info.md.bud  properties.plist
src/: include-private.h  include.h  mulle-objc-runtime-startup.c
src/reflect/: _mulle-objc-runtime-startup-provide.h
